Transfered to tensorflow

--- a/tensorflow_elastic/BUILD
+++ b/tensorflow_elastic/BUILD
@@ -11,13 +11,31 @@ config_setting(
 
 py_library(
     name = "elastic_mwms",
-    srcs = ([
+    srcs = glob(["**/__init__.py"])+ ["version.py"],
+    srcs_version = "PY2AND3",
+
+    deps= [
+      ":tensorflow_elastic_impl",
+    ]
+
+)
+
+py_library(
+    name = "tensorflow_elastic_impl",
+    srcs = [
       "__init__.py",
         #"python/__init__.py",
-    ]) + glob(["python/**/__init__.py"]),
+    ] + glob(["agent/**/*.py"])
+    + glob(["distributed/**/*.py"])
+    + glob(["events/**/*.py"])
+    + glob(["metrics/**/*.py"])
+    + glob(["rendezvous/**/*.py"])
+    + glob(["timer/**/*.py"])
+    + glob(["utils/**/*.py"]),
     srcs_version = "PY2AND3",
 
 )
+
 
 py_test(
     name = "elastic_collective_all_reduce_strategy_test",
